add example of emotions

--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -53,6 +53,14 @@
     overflow: auto;
     .border-radius();
   }
+
+  #upload-form {
+    display: inline;
+  }
+
+  img.emotion {
+    cursor: pointer;
+  }
 }
 
 .avatar-info{
