--- a/views/layout.jade
+++ b/views/layout.jade
@@ -75,5 +75,11 @@ html(lang="en")
 
       footer
         p &copy; posts.li 2011
+        p powered by 
+          a(href="http://www.expressjs.org") express
+          &nbsp;|
+          a(href="") bootstrap
+          |
+          a(href="") iconic
 
 
