add clock, tag icons

--- a/public/stylesheets/icons.less
+++ b/public/stylesheets/icons.less
@@ -4,6 +4,7 @@
   display: inline-block;
   margin: 0 5px;
   opacity: 0.5;
+  vertical-align: middle;
 
   &:hover {
     opacity: 1;
@@ -18,7 +19,7 @@
   }
 
   &.star {
-    background: url(../images/star-stroke.png);
+    background: url(../images/star_stroke.png);
   }
 
   &.cog {
@@ -31,6 +32,14 @@
 
   &.pen {
     background: url(../images/pen.png);
+  }
+
+  &.clock {
+    background: url(../images/clock.png);
+  }
+
+  &.tag {
+    background: url(../images/tag_stroke.png);
   }
 
   &.close-icon {
@@ -50,7 +59,11 @@
   }
 
   &.star.fill {
-    background: url(../images/star-fill.png);
+    background: url(../images/star_fill.png);
+  }
+
+  &.tag.fill {
+    background: url(../images/tag_fill.png);
   }
 
 }
