--- a/views/layout.jade
+++ b/views/layout.jade
@@ -80,6 +80,6 @@ html(lang="en")
           &nbsp;|
           a(href="") bootstrap
           |
-          a(href="") iconic
+          a(href="http://somerandomdude.com/work/iconic/") iconic
 
 
