--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -20,6 +20,7 @@ block content
         .span4.sidebar
           a.btn(data-controls-modal="my-modal", data-backdrop="static", data-keyboard="true") foo1 &nbsp;
           a.btn#pop-info info &nbsp;
+          a.btn 温故
           // TODO bookmark plugin, 1 click send, 3 seconds wait for user react
           // if can not get "main", "content" info for the page, let user locate it
             a.btn(href=" /* see loader.js */ ") send to posts.li
