--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -11,7 +11,7 @@
   .side-controls {
     float: right;
     width: 300px;
-    margin: 20px -320px 0 0;
+    margin: 50px -320px 0 0;
     label {
       float : none;
     }
@@ -41,6 +41,10 @@
   .tips {
     line-height: 24px;
     font-weight: bold;
+  }
+
+  .editor-bar {
+    margin-top: 12px;
   }
 
   .preview {
