add title for achivments icon

--- a/views/posts/index.jade
+++ b/views/posts/index.jade
@@ -19,14 +19,14 @@ block content
 
         .span4.sidebar
           p
-            span.icon.loop
-            span 12345
-            span.icon.star
-            span 12345
-            span.icon.heart
-            span 12345
-          p
             span.icon.award.disable
+          p
+            span.icon.loop.tipsy(title="Your posts have been rebloged")
+            span 12345
+            span.icon.star.tipsy(title="Your posts have been marked")
+            span 12345
+            span.icon.heart.tipsy(title="Your posts have been liked")
+            span 12345
 
           //
             a.btn 温故
