--- a/public/stylesheets/icons.less
+++ b/public/stylesheets/icons.less
@@ -77,4 +77,8 @@
     background: url(../images/tag_fill.png);
   }
 
+  &.award.fill {
+    background: url(../images/award_fill_8x16.png) center center no-repeat;
+  }
+
 }
