refactor post data structure, add modify page

--- a/public/stylesheets/editor.less
+++ b/public/stylesheets/editor.less
@@ -20,6 +20,20 @@
   }
 }
 
+.modify-post {
+
+  textarea[name="content"] {
+    width: 98%;
+    min-height: 300px;
+    margin-bottom: 10px;
+  }
+
+  input[name="message"] {
+    width: 80%;
+  }
+
+}
+
 .new-post {
   .makeColumn(10.2);
   .side-controls {
