--- a/views/layout.jade
+++ b/views/layout.jade
@@ -30,6 +30,7 @@ html(lang="en")
     script(src="/javascripts/jquery-pjax/jquery.pjax.js")
     script(src='/javascripts/jquery-notify/src/jquery.notify.js')
     script(src="/javascripts/app.js")
+    script(src="/javascripts/api.js")
 
     block scripts
 
