fix stylesheets conflict with bootstrap popover

--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -65,7 +65,7 @@ footer{
 }
 
 /* The white background content wrapper */
-.content {
+#content {
   background-color: #eee;
   padding: 20px;
   margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
