--- a/views/layout.jade
+++ b/views/layout.jade
@@ -61,7 +61,7 @@ html(lang="en")
         a(href="/")
           img(src="/images/logo-small.png")
 
-      .content
+      #content
         #notify-container.ui-notify
            #basic-template
              a.ui-notify-cross.ui-notify-close(href="#")&times;
