small improve new performance

--- a/views/posts/new-post-editor.jade
+++ b/views/posts/new-post-editor.jade
@@ -35,6 +35,7 @@
         a.collapse(href="#") &times;
 
     textarea(placeholder="Say something", name='content')
-  .editor-bar.lazy
-    include editor-bar
-  .preview.lazy
+  .lazy
+    .editor-bar
+      include editor-bar
+    .preview
