--- a/public/stylesheets/layout.less
+++ b/public/stylesheets/layout.less
@@ -16,6 +16,7 @@ html, body {
 }
 
 a, a:hover {
+  cursor: pointer;
   text-decoration: none;
 }
 
@@ -77,6 +78,10 @@ footer{
 
   .sidebar {
   }
+}
+
+#comment-template {
+  display: none;
 }
 
 .clickable {
