--- a/public/stylesheets/posts.less
+++ b/public/stylesheets/posts.less
@@ -74,3 +74,11 @@
   font-weight: bold;
   color: gray;
 }
+
+.hidden {
+  visibility: hidden;
+}
+
+.comment:hover .hidden {
+  visibility: visible;
+}
