--- a/views/posts/comment.jade
+++ b/views/posts/comment.jade
@@ -1,4 +1,6 @@
 .comment(id="comment-\#\{index}")
+  .right
+    span.icon12.pin.fill.clickable.hidden.tipsy(title="Keep it in list")
   a(href="")
     img(src="http://www.gravatar.com/avatar/\#\{user.md5}?d=retro&amp;s=20", width="20", height="20")
     // this is a chatting room
