--- a/public/stylesheets/icons.less
+++ b/public/stylesheets/icons.less
@@ -120,4 +120,8 @@
     background: url(../images/award_fill_8x16.png) center center no-repeat;
   }
 
+  &.share.fill {
+    background: url(../images/share_fill.png) center center no-repeat;
+  }
+
 }
