--- a/views/posts/comment.jade
+++ b/views/posts/comment.jade
@@ -6,5 +6,5 @@
     // this is a chatting room
     span status(in topic, leave topic, offline)
     // TODO @user
-  p \#{comment.content}
+  p \#{content}
 
