--- a/views/posts/entry.jade
+++ b/views/posts/entry.jade
@@ -2,6 +2,14 @@
 
   .avatar-info
     .avatar
+      // 1. TODO (personalize) diamond avatar border, HD, big size avatar upload
+      // Take a video of how we create diamond image, gathering pictures, hand drawing, pick out best one, make digital version, take avatar photo, apply border, final effect
+      // 2. auto switch border service if there already many border design, to help those border collector
+      // 3. mouse hover, name card (only VIP), more personalize information, background style and so on.
+      // VIP will get be promote for a while, to make him think it works
+      // topic border, topic chain style, topic controls icons
+      // NOTE effect must note bother other users, don't be very noise
+      // promote is another standalone service.
       a.avatar(href="#", style="background-image:url('#{avatar(user.md5, 64)}')", title="Jason's blog")
       // show this on hover, click to pop menu
       .user_info
@@ -36,10 +44,13 @@
       // like has no effect, user wont click it
       // use bookmark, favorit
 
+    // TODO use redis interset(user:id:friends, post:id:sharer)
+    // if entry.friendsSharedThis
+    .friends-info xxx, xxx, xxx shared this post
     .post-info
       // TODO simplfy this, just for test now
       // a(href="#")= entry.contributors[entry.authorId].fullname
-      - var _author = entry.contributors && entry.contributors[entry.authorId]
+      - var _author = entry.participators && entry.participators[entry.authorId]
       a(href="#")= _author && _author.fullname
         span :
 
@@ -49,8 +60,15 @@
     .post-controls.right
       span.icon.loop.clickable.tipsy(class = false && 'fill', title="Reblog")
       span.icon.star.clickable.tipsy(class = false && 'fill', title="Mark")
+      // TODO (personalize, fee, user icon) use card, heart as like, spade as dislike, club as share, diamond as favorit
       span.icon.heart.clickable.tipsy(class = false && 'fill', title="Like")
       span.show-comments.icon.comment-alt.clickable.tipsy(class=entry.commentsCount && "fill" , title="#{entry.commentsCount || 'No'} comments")
+        // TODO xxx participate in this post, 3 different way, choose 1, click head icon view his comments only
+        // 1. your friends participate
+        // 2. most rated participator, most comment participator, author, random users
+        // 3. all participators, maybe very much, thousounds, mouse over, docks style, gallary style
+        // 4. if topic is about a view point, you can agree or oppose his point, show participators in 2 group
+      span xxx, xxx, xxx
       span.icon.none
       span.icon.close-icon.clickable.tipsy(title="Never show this again")
 
@@ -66,6 +84,7 @@
         a.tag(class="tag-mytag", href="/tag/mytag") my-tag
         span.clickable &times;
         span.icon.tag.clickable.tipsy(class = false && 'fill', title="Add tags")
+
 
     .comments
       .comment-list
