add shared sharing icon

--- a/public/stylesheets/icons.less
+++ b/public/stylesheets/icons.less
@@ -124,4 +124,8 @@
     background: url(../images/share_fill.png) center center no-repeat;
   }
 
+  &.share.done {
+    background: url(../images/shared.png) center center no-repeat;
+  }
+
 }
