--- a/views/layout.jade
+++ b/views/layout.jade
@@ -31,6 +31,8 @@ html(lang="en")
     script(src="/javascripts/jquery-pjax/jquery.pjax.js")
     script(src='/javascripts/jquery-notify/src/jquery.notify.js')
     script(src="/javascripts/app.js")
+    script(src="/javascripts/editor.js")
+    script(src="/javascripts/post-modify.js")
 
     block scripts
 
