--- a/views/posts/comment.jade
+++ b/views/posts/comment.jade
@@ -1,10 +1,10 @@
-.comment(id="comment-\#\{index}")
+.comment(id="comment-{\\{index}}")
   .right
     span.icon12.pin.fill.clickable.hidden.tipsy(title="Keep it in list")
   a(href="")
-    img(src="http://www.gravatar.com/avatar/\#\{user.md5}?d=retro&amp;s=20", width="20", height="20")
+    img(src="http://www.gravatar.com/avatar/{{authorMd5}}?d=retro&amp;s=20", width="20", height="20")
     // this is a chatting room
     span status(in topic, leave topic, offline)
     // TODO @user
-  p \#{content}
+  p {{content}}
 
