--- a/views/layout.jade
+++ b/views/layout.jade
@@ -66,15 +66,16 @@ html(lang="en")
 
       #templates
         #modify-post-template
-          include posts/editor-bar-outer
-          form(method="post", name="modifypost")
-            textarea(placeholder="Say something", name="content")#\{entry.revisions[entry.revisions.length - 1].content}
-            .clearfix.editor-bar
-              include posts/editor-bar
-            .right
-              input.btn.primary(type="submit", value="Modify")
-            input(name="message", placeholder="commit message")
-              input(name="title", type="hidden", value="#\{entry.title}")
+          div
+            include posts/editor-bar-outer
+            form(method="post", name="modifypost")
+              textarea(placeholder="Say something", name="content")#\{entry.revisions[entry.revisions.length - 1].content}
+              .clearfix.editor-bar
+                include posts/editor-bar
+              .right
+                input.btn.primary(type="submit", value="Modify")
+              input(name="message", placeholder="commit message")
+                input(name="title", type="hidden", value="#\{entry.title}")
 
         #comment-template
           include posts/comment
